Fixed bug #4787: Editing window is too small.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1808 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_formsOnPage.css
+++ b/feeditadvanced/res/css/fe_formsOnPage.css
@@ -3,7 +3,6 @@ body {
 	background-color: black;
 }
 .formsOnPageWrapper {
-	height: 305px;
 	overflow: auto;
 	background-color: white;
 }
